2003-09-04  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-attribute-wrapper-check-button.c, cong-attribute-wrapper-check-button.h, cong-attribute-wrapper-radio-button.c, cong-attribute-wrapper-radio-button.h, cong-attribute-wrapper.c, cong-attribute-wrapper.h, Makefile.am

	New files

2003-09-03  David Malcolm <david@davemalcolm.demon.co.uk>
	
	* plugin-doc-from-xds.c

	Now sets the xmlDocPtr on the tree clone
	
	* cong-attribute-editor.c

	Should now clean up properly

	* cong-attribute-editor-cdata.c, cong-attribute-editor-enumeration.c, cong-attribute-editor.c, cong-attribute-editor.h

	Moved all document notifications and filtering to base class

	* cong-attribute-editor-enumeration.c, cong-attribute-editor-enumeration.h, Makefile.am, cong-attribute-editor.c, cong-attribute-editor.h

	Added new file for editing ENUMERATION attributes; moved code into it and reworked as a cong_attribute_editor subclass

2003-09-02  Jeff Martin <jeff@custommonkey.org>

	* plugin-doc-from-xds.c, cong-dispspec.c, cong-dispspec.h, cong-fake-plugin-hooks.h, main.c, Makefile.am

	New plugin to read contents of document-template from a dispspec and use this in the new document wizard as a template document.
	
2003-09-02  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-attribute-editor.c, cong-attribute-editor.h, cong-dialog.c, cong-node-properties-dialog.c, tree.c

	Created attribute editor class hierarchy; moved CDATA editing into new file as a subclass; removed some gtk_widget_show_all calls

	* cong-attribute-editor-cdata.c, cong-attribute-editor-cdata.h, Makefile.am

	New files
	
	* cong-node-properties-dialog.c, plugin-docbook.c

	Moved the attribute editor widget code to cong-attribute-editor.c
	
	* cong-attribute-editor.c, cong-attribute-editor.h, Makefile.am

	New files
	
2003-09-01  David Malcolm <david@davemalcolm.demon.co.uk>

	* plugin-docbook.c
