@@ -143,6 +143,23 @@ create_cdata_editor (GladeXML *xml,
 extern CongDocument *global_glade_doc_ptr;
 extern CongNodePtr global_glade_node_ptr;
 
+/* Hook to bind a radio button to a possible value of an attribute: */
+void
+cong_bind_radio_button (GtkRadioButton *radio_button,
+			CongDocument *doc,
+			CongNodePtr node,
+			const gchar *attribute_name,
+			const gchar *attribute_value);
+
+/* Hook to bind a checkbox to two possible values of an attribute: */
+void
+cong_bind_check_button (GtkCheckButton *check_button,
+			CongDocument *doc,
+			CongNodePtr node,
+			const gchar *attribute_name,
+			const gchar *attribute_value_unchecked,
+			const gchar *attribute_value_checked);
+
 G_END_DECLS
 
 
